--- a/assets/scss/_events-page.scss
+++ b/assets/scss/_events-page.scss
@@ -3,7 +3,7 @@
     position: relative;
     width: 100%;
     height: 700px;
-    background: url("../assets/imgs/Eventbg.png") no-repeat;
+    background: url("../assets/imgs/event-bg.png") no-repeat;
     background-size: cover;
     text-align: center;
     overflow: hidden;
