--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,7 @@ SCHOOL PAGE
   position: relative;
   width: 100%;
   height: 700px;
-  background: url("../assets/imgs/Eventbg.png") no-repeat;
+  background: url("../assets/imgs/event-bg.png") no-repeat;
   background-size: cover;
   text-align: center;
   overflow: hidden; }
