--- a/assets/scss/_root.scss
+++ b/assets/scss/_root.scss
@@ -18,14 +18,15 @@ html{
     font-family: $font-stack;
     font-weight: normal;
     font-style: normal;
+    font-size: 14px;
 }
 
 body {
   color: #333;
-  background-color: #000;
-  font-size: 14px;
-  line-height: 1.5;
+  background-color: #fff;
+  line-height: 1.5rem;
   letter-spacing: 0em;
+  min-height: 100%;
 }
 
 a {
@@ -57,4 +58,8 @@ em {
     width: 60%;
     margin: 80px auto;
     background: #979797;
+}
+
+@media (max-width: 767px){
+
 }
