--- a/assets/scss/_events-page.scss
+++ b/assets/scss/_events-page.scss
@@ -2,55 +2,30 @@
     display: block;
     position: relative;
     width: 100%;
-    height: 700px;
-    background: url("../assets/imgs/event-bg.png") no-repeat;
+    height: $page-height;
+    background: url("../assets/imgs/event-bg.jpg") no-repeat;
     background-size: cover;
+    background-position: center center;
     text-align: center;
     overflow: hidden;
     h1{
         font-family: "myoswaldlight", $font-stack;
-        font-size: 72px;
+        font-size: 5.143rem;
         color: #fff;
         width: auto;
-        margin-top: 70px;
+        margin: 1em 0;
         vertical-align: bottom;
     }
 }
 
 .events-box{
     position: relative;
-    height: 304px;
-    width: 800px;
+    height: 43.43%;
+    width: 56%;
     margin: 0 auto;
-    background-color: #fff;
+    overflow: scroll;
 }
 
-.event-item{
-    display: block;
-    width: 200px;
-    height: 100%;
-    float: left;
-    .event-img{
-        height: 200px;
-        width: 200px;
-        overflow: hidden;
-    }
-    .event-intro{
-        display: block;
-        width: 160px;
-        margin: 25px auto 0 auto;
-        color: #fff;
-        font-weight: normal;
-        font-size: 12px;
-        line-height: 14px;
-        letter-spacing: 0;
-        text-align: left;
-    }
-}
-
-.event-date{
-    font-weight: lighter;
-}
 
 .event-1{
     background-color: #01669E;
@@ -77,4 +52,33 @@
     .event-img{
         background: url('../assets/imgs/meeting.png') no-repeat;
     }
+}
+
+.event-item{
+    display: block;
+    width: 200px;
+    height: 100%;
+    float: left;
+    .event-img{
+        height: 65.79%;
+        width: 100%;
+        overflow: hidden;
+        background-position: center center;
+        background-size: 101% 101%;
+    }
+    .event-intro{
+        display: block;
+        width: 80%;
+        margin: 12.4% auto 0 auto;
+        color: #fff;
+        font-weight: normal;
+        font-size: 0.857rem;
+        line-height: 1rem;
+        letter-spacing: 0;
+        text-align: left;
+    }
+}
+
+.event-date{
+    font-weight: lighter;
 }
