--- a/assets/scss/_gallery-page.scss
+++ b/assets/scss/_gallery-page.scss
@@ -1,15 +1,15 @@
 .gallery-page{
     position: relative;
     width: 100%;
-    height: 700px;
+    height: $page-height;
     background: #fff;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 .gallery-items{
     width: auto;
     height: auto;
-    margin: 86px auto;
+    margin: 6% auto;
     text-align: center;
 }
 
@@ -26,7 +26,7 @@
     width: 234px;
     overflow: hidden;
     background-color: #f1c40f;
-    margin: 19px 21px;
+    margin: 1.357% 21px;
     img{
         position: absolute;
         left: 0;
@@ -44,7 +44,7 @@
         left: -80px;
         -webkit-transform: rotate(-90deg);
         font-family: myoswaldregular, $font-stack;
-        font-size: 55px;
+        font-size: 3.929rem;
         font-weight: 500;
         margin: 0;
     }
@@ -54,7 +54,7 @@
         text-align: left;
         font-family: mysanfranciscodisplaylight, $font-stack;
         font-weight: 100;
-        font-size: 16px;
+        font-size: 1.143rem;
         width: 155px;
         span{
             font-family: mysanfranciscodisplaymedium, $font-stack;
