--- a/assets/scss/_menu-bar.scss
+++ b/assets/scss/_menu-bar.scss
@@ -24,14 +24,14 @@ MENU OBJECT
 
 .menu-items{
     display: inline-block;
-    width: auto;
+    width: 100%
 }
 
 .menu-item{
     display: inline-block;
     list-style: none;
-    font-size: 12px;
-    margin:0 47px;
+    font-size: 0.857rem;
+    margin:0 3%;
 }
 
 
@@ -51,7 +51,6 @@ MENU OBJECT
 .container.has-push-top{
     transform: translateY(60px);
     transition: transform 0.5s ease-in;
-
 }
 
 
@@ -59,9 +58,9 @@ MENU OBJECT
     float: right;
     display: block;
     position: absolute;
-    top: 70px;
-    right: 10px;
-    height: 50px;
+    top: 116.7%;
+    right: 0.7%;
+    height: 83%;
     width: 50px;
     margin: 15px 15px 0 0;
     padding: 0;
@@ -69,13 +68,14 @@ MENU OBJECT
     overflow: hidden;
     border-radius: 3px 3px 3px 3px;
     background-color: #282828;
+    opacity: 0.9;
 
     div{
         background-color: #fff;
         border-radius: 2px 2px 2px 2px;
-        height: 5px;
-        width: 36px;
-        left: 7px;
+        height: 10%;
+        width: 72%;
+        left: 14%;
     }
 }
 
