--- a/assets/scss/_school-page.scss
+++ b/assets/scss/_school-page.scss
@@ -5,7 +5,7 @@ SCHOOL PAGE
 -----------------------------------------------------------------------------*/
 .school-page{
     position: relative;
-    height: 1400px;
+    height: 1.5*$page-height;
     background-color: #fff;
 }
 
@@ -14,37 +14,40 @@ SCHOOL PAGE
     position: relative;
     font-family: 'myoswaldregular', $font-stack;
     font-weight: normal;
-    font-size: 56px;
+    font-size: 4rem;
     color: #FFD84F;
     float: left;
-    margin-top: 70px;
+    margin-top: 5%;
 }
 
 .intro-div{
     position: relative;
+    height: 85%;
     margin-top: 40px;
     clear: both;
 }
 
 .halftone-img{
     float: left;
-    height: 1051px;
-    width: 393px;
-    background: url("../assets/imgs/halftone.png") no-repeat;
+    height: 85%;
+    width: 20%;
+    background: url("../assets/imgs/halftone.jpg") no-repeat;
+    background-size: cover;
 }
 
 .intro-text{
     display: block;
+    overflow: scroll;
     float: left;
-    width: 500px;
-    height: auto;
-    margin-left: 150px;
+    max-width: 60%;
+    max-height: 90%;
+    margin-left: 10%;
     color: #000;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 1.143rem;
     h2{
         font-weight: 400;
-        font-size: 30px;
+        font-size: 2.143rem;
     }
     p{
         display: block;
@@ -56,7 +59,8 @@ SCHOOL PAGE
 .logo{
     position: relative;
     height: 46px;
-    width: 307px;
+    min-width: 50%;
     background: url("../assets/imgs/LOGO.png") no-repeat;
+    background-size: contain;
     margin-bottom: 29px;
 }
