change the directory organization

--- a/assets/scss/_contact-page.scss
+++ b/assets/scss/_contact-page.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: $page-height;
     background-color: #fff;
-    background: url("../assets/imgs/contact-bg.jpg") no-repeat;
+    background: url("../imgs/contact-bg.jpg") no-repeat;
     background-size: cover;
     overflow: hidden;
 }
