--- a/assets/scss/_school-page.scss
+++ b/assets/scss/_school-page.scss
@@ -31,7 +31,7 @@ SCHOOL PAGE
     float: left;
     height: 85%;
     width: 20%;
-    background: url("../assets/imgs/halftone.jpg") no-repeat;
+    background: url("../imgs/halftone.jpg") no-repeat;
     background-size: cover;
 }
 
@@ -60,7 +60,7 @@ SCHOOL PAGE
     position: relative;
     height: 46px;
     min-width: 50%;
-    background: url("../assets/imgs/LOGO.png") no-repeat;
+    background: url("../imgs/LOGO.png") no-repeat;
     background-size: contain;
     margin-bottom: 29px;
 }
