--- a/assets/scss/_events-page.scss
+++ b/assets/scss/_events-page.scss
@@ -3,7 +3,7 @@
     position: relative;
     width: 100%;
     height: $page-height;
-    background: url("../assets/imgs/event-bg.jpg") no-repeat;
+    background: url("../imgs/event-bg.jpg") no-repeat;
     background-size: cover;
     background-position: center center;
     text-align: center;
@@ -30,27 +30,27 @@
 .event-1{
     background-color: #01669E;
     .event-img{
-        background: url('../assets/imgs/guggenheim.png') no-repeat;
+        background: url('../imgs/guggenheim.png') no-repeat;
     }
 }
 
 .event-2{
     background-color: #00B477;
     .event-img{
-        background: url('../assets/imgs/museum.png') no-repeat;
+        background: url('../imgs/museum.png') no-repeat;
     }
 }
 
 .event-3{
     background-color: #D49538;
     .event-img{
-        background: url('../assets/imgs/van-gogh.png') no-repeat;
+        background: url('../imgs/van-gogh.png') no-repeat;
     }
 }
 .event-4{
     background-color: #00AF92;
     .event-img{
-        background: url('../assets/imgs/meeting.png') no-repeat;
+        background: url('../imgs/meeting.png') no-repeat;
     }
 }
 
